--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ section.about p {
 }
 section.about .imgAbout {
   width: 50%;
-  background-image: url(/assets/central.jpg);
+  background-image: url(https://github.com/s0d4z3r0/landing-page-aguiar/blob/main/assets/central.jpg?raw=true);
   filter: grayscale(80%);
   background-size: cover;
   background-position: 0 -11rem;
@@ -139,13 +139,13 @@ section.services .service1 .imgService,
   background-position: 0 -1rem;
 }
 section.services .service1 .imgService {
-  background-image: url(assets/service_1.jpg);
+  background-image: url(https://github.com/s0d4z3r0/landing-page-aguiar/blob/main/assets/service_1.jpg?raw=true);
 }
 section.services .service2 .imgService {
-  background-image: url(assets/service_2.jpg);
+  background-image: url(https://github.com/s0d4z3r0/landing-page-aguiar/blob/main/assets/service_2.jpg?raw=true);
 }
 section.services .service3 .imgService {
-  background-image: url(assets/service_3.jpg);
+  background-image: url(https://github.com/s0d4z3r0/landing-page-aguiar/blob/main/assets/service_3.jpg?raw=true);
 }
 section.services .service1 h4,
 .service2 h4,
@@ -196,13 +196,13 @@ section.testimonials .testimonialsPeoples .imgTestimonial {
   background-size: cover;
 }
 section.testimonials .testimonialsPeoples .testimonial1 .imgTestimonial {
-  background-image: url(assets/p1.jpg);
+  background-image: url(https://github.com/s0d4z3r0/landing-page-aguiar/blob/main/assets/p1.jpg?raw=true);
 }
 section.testimonials .testimonialsPeoples .testimonial2 .imgTestimonial {
-  background-image: url(assets/p2.jpg);
+  background-image: url(https://github.com/s0d4z3r0/landing-page-aguiar/blob/main/assets/p2.jpg?raw=true);
 }
 section.testimonials .testimonialsPeoples .testimonial3 .imgTestimonial {
-  background-image: url(assets/p3.jpg);
+  background-image: url(https://github.com/s0d4z3r0/landing-page-aguiar/blob/main/assets/p3.jpg?raw=true);
 }
 section.testimonials .testimonialsPeoples .nameTestimonial {
   text-align: center;
